--- a/index.html
+++ b/index.html
@@ -132,24 +132,21 @@
     .hidden-css {
       display: none !important; 
     }
-  </style>
-<script>
-(function(zxoi){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = zxoi || {};
-s.src = "\/\/ancientsnow.com\/csDg9\/6.bO2D5alOS\/WEQd9\/NRjwci5LNPT\/UCwdOLS\/0h2MNLzAkM1mN\/TKEBzx";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>	
+  </style>	
 </head>
 <body>
 	
   <h1>Things got wet in there.</h1>
-
+	<script type="text/javascript">
+  atOptions = {
+    'key' : '77d0d7666d4c0f56b47a00a0de655ce9',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://nailsheedlesswarn.com/77d0d7666d4c0f56b47a00a0de655ce9/invoke.js"></script>
   <figureitemscope itemtype="http://schema.org/VideoObject">
     <img src="10.jpg" alt="Things got wet in there."/>
         <meta itemprop="uploadDate" content="2025-08-028" />
@@ -157,8 +154,8 @@ l.parentNode.insertBefore(s, l);
         <link itemprop="contentUrl" href="https://gocixcdnvdey.github.io/cGYSaM8z1.mp4/" />
   </figure>
   <div class="button-container">
-    <a href="https://gocixcdnvdey.github.io/cGYSaM8z1.mp4/" target="_blank">Watch Video</a>
-    <a href="https://dragonxcdnvideyy401co.github.io/" target="_blank">More Video</a>
+    <a href="https://cdn.videy.co/cGYSaM8z1.mp4" target="_blank">Watch Video</a>
+    <a href="https://rudr780.github.io" target="_blank">More Video</a>
   </div>
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
@@ -217,13 +214,38 @@ l.parentNode.insertBefore(s, l);
       
     })();
  </script>
-</body>
+  <header>
+<script src="https://nailsheedlesswarn.com/21/7a/cd/217acd50d4e42475eb7be554d1d981f8.js"></script>
+  </header>
 
-</html>
+  <script>
+    // Cegah masuk fullscreen lewat JavaScript
+    document.addEventListener('fullscreenchange', () => {
+      if (document.fullscreenElement) {
+        document.exitFullscreen();
+      }
+    });
 
- <!-- Histats.com  START  (aync)-->
+    // Proteksi klik kanan dan F12
+    (function () {
+      document.addEventListener('contextmenu', function (e) {
+        if (!e.target.closest('.allow-context, iframe')) {
+          e.preventDefault();
+        }
+      });
+
+      document.addEventListener('keydown', function (e) {
+        if (e.key === "F12") e.preventDefault();
+        if (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) e.preventDefault();
+        if (e.ctrlKey && ["U","S"].includes(e.key.toUpperCase())) e.preventDefault();
+      });
+    })();
+  </script>
+
+
+   <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4573229,4,0,0,0,00010000']);
+_Hasync.push(['Histats.start', '1,5007039,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -231,5 +253,8 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4573229&101" alt="" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?5007039&101" alt="" border="0"></a></noscript>
 <!-- Histats.com  END  -->
+
+</body>
+</html>
